# bluescan

./: .gitignore  Cargo.toml  README.md
src/: get_os_info.rs  installed_programs.rs  main.rs  nvd_query.rs  os_info.rs  osv_query.rs
src/linux/: linuxos.rs  mod.rs
src/macos/: macos_programs.rs  mod.rs
src/windows/: installed_programs.rs  mod.rs  os_info.rs
