[package]
name = "bluescan"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
colored = "3.0.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
tokio = { version = "1.48.0", features = ["full"] }

wmi="0.18.0"
anyhow = "1.0.100"
winreg = "0.50.0"

