[package]
name = "bluescan"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
colored = "3.0.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
gethostname = "1.1.0"
os_info = "3.13.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
